📦stop the content from getting too small

--- a/src/styles/_main-container.scss
+++ b/src/styles/_main-container.scss
@@ -3,4 +3,5 @@
     font-family: "Poppins", sans-serif;
     font-size: 1.5rem;
     margin: 0 3rem;
+    min-width: 30rem;
 }
